Added support for Control Inputs
This allows any component to be connected to any input of another component, for example connecting a low frequency oscillator connected to the frequency input of another oscillator.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="AmplifierAttenuator.cs" />
     <Compile Include="ControlInput.cs" />
+    <Compile Include="ISynthComponent.cs" />
+    <Compile Include="LinearFrequencyConverter.cs" />
     <Compile Include="Mixer.cs" />
     <Compile Include="Oscillator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
