Made all inputs of Oscillator use ControlInput so we can feed them a signal from another object Made a GateGenerator, started TriggerGenerator, as yet untested. Renamed AmplifierAttenuator to just Amplifier.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -44,8 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AmplifierAttenuator.cs" />
+    <Compile Include="Amplifier.cs" />
     <Compile Include="ControlInput.cs" />
+    <Compile Include="GateGenerator.cs" />
     <Compile Include="ISynthComponent.cs" />
     <Compile Include="LinearFrequencyConverter.cs" />
     <Compile Include="Mixer.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynthComponent.cs" />
     <Compile Include="SynthToSampleProvider.cs" />
+    <Compile Include="TriggerGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
