Added cutoff component.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Amplifier.cs" />
     <Compile Include="ControlInput.cs" />
+    <Compile Include="Cutoff.cs" />
     <Compile Include="EnvelopeGenerator.cs" />
     <Compile Include="GateGenerator.cs" />
     <Compile Include="ISynthComponent.cs" />
