Added a digital delay.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Amplifier.cs" />
     <Compile Include="ControlInput.cs" />
     <Compile Include="Cutoff.cs" />
+    <Compile Include="Delay.cs" />
     <Compile Include="EnvelopeGenerator.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="GateGenerator.cs" />
