Added more nice test features.

--- a/SynthTest/SynthTest.csproj
+++ b/SynthTest/SynthTest.csproj
@@ -59,6 +59,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Lfo.cs" />
+    <Compile Include="PoliMixer.cs" />
     <Compile Include="Vco.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
