Refactored the tables into their own static class, and improved the filter implementation.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -59,6 +59,7 @@
     <Compile Include="StepSequencer.cs" />
     <Compile Include="SynthComponent.cs" />
     <Compile Include="SynthToSampleProvider.cs" />
+    <Compile Include="Tables.cs" />
     <Compile Include="TriggerGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
