--- a/SynthTest/SynthTest.csproj
+++ b/SynthTest/SynthTest.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Lfo.cs" />
+    <Compile Include="PoliFilter.cs" />
     <Compile Include="PoliMixer.cs" />
     <Compile Include="Vco.cs" />
     <Page Include="MainWindow.xaml">
