--- a/SynthTest/SynthTest.csproj
+++ b/SynthTest/SynthTest.csproj
@@ -59,7 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Lfo.cs" />
+    <Compile Include="PoliLfo.cs" />
     <Compile Include="PoliAmp.cs" />
     <Compile Include="PoliFilter.cs" />
     <Compile Include="PoliMixer.cs" />
