Changed cutoff to a clipper, and refactored ControlValue out of the Delay component.

--- a/SharpSynth/SharpSynth.csproj
+++ b/SharpSynth/SharpSynth.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="Amplifier.cs" />
     <Compile Include="Input\ControlValue.cs" />
-    <Compile Include="Cutoff.cs" />
+    <Compile Include="Clipper.cs" />
     <Compile Include="Delay.cs" />
     <Compile Include="EnvelopeGenerator.cs" />
     <Compile Include="Filter.cs" />
